<resources>
    <string name="app_name">Miru Chat</string>
    <string name="prefName">miruPrefs</string>

    <string name="userPrefKey">miruUsername</string>

    <string name="sendBird_AppId">1A49BA89-1050-4C5C-8E12-E37D8B337457</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="main_header">Select an Option</string>
    <string name="login_header">Enter Details</string>
    <string name="askuser_header">Enter Username</string>

    <string name="username_hint">Username</string>
    <string name="roomname_hint">Room Name</string>
    <string name="youtube_hint">Youtube link</string>
    <string name="chat_hint">Enter Message Here</string>

    <string name="remember_checkBox">Remember Me</string>

    <string name="menuitem_invite">Invite User</string>
    <string name="menuitem_send">Send Invite</string>

    <string name="button_host">Host</string>
    <string name="button_join">Join</string>
    <string name="button_login">Login</string>
    <string name="button_send">Send</string>
    <string name="button_submit">Submit</string>

</resources>
