<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/askuser_header"
        android:textSize="@dimen/dialogHeader_size"
        android:textAlignment="center"
        android:background="@color/mainRed"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:hint="@string/username_hint"
        android:textColorHint="@android:color/darker_gray"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"/>

</LinearLayout>