<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_header"
        android:textAlignment="center"
        android:textSize="@dimen/header_size"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/button_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_host"
            android:textSize="@dimen/button_size"/>

        <Button
            android:id="@+id/button_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_join"
            android:textSize="@dimen/button_size"/>/>

    </LinearLayout>


</RelativeLayout>